# devlore

./: .gitignore  AGENTS.md  HISTORY.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/commands/: ask.md  compile.md  devlore.md  verify.md
.obsidian/plugins/devlore/: main.js  manifest.json
demo/: README.md  hero.tape  play-add.sh  play-ask.sh  play-monday.sh  receipts.tape
hooks/: capture_gate.py  pre-compact.py  session-end.py  session-start.py  stop.py
scripts/: activity.py  add_codebase.py  build_index.py  capture-config  capture_config.py  compile.py  compile.sh  config.py  devlore  devlore.sh  flush.py  ingest_all_context.py  ingest_doc.py  init_kb.py  kb_commit.py  kb_resolve.py  lint.py  obsidian_setup.py  optin.py  query.py  query.sh  recheck.py  recheck.sh  remove_codebase.py  staleness.py  stamp_baseline.py  status.py  status.sh  statusline-wrapper.sh  statusline.py  transcripts.py  update.sh  update_kb.py  utils.py  verify.py  verify.sh
